# qq-ai-chat-bot

./: .env.example  .gitignore  README.md  bot.py  memory_panel.py  pyproject.toml  requirements.txt  system_prompt.txt.example
src/: config.py
src/plugins/admin/: __init__.py  commands.py
src/plugins/ai_chat/: __init__.py  chat_handler.py  llm_client.py  rate_limiter.py  session_manager.py
