[project]
name = "qq-ai-chat-bot"
version = "0.1.0"
description = "QQ AI chat bot powered by NoneBot2 + NapCat + LLM"
requires-python = ">=3.10"
dependencies = [
    "nonebot2[fastapi]>=2.5.0",
    "nonebot-adapter-onebot>=2.4.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "anthropic>=0.70.0",
    "openai>=1.60.0",
    "tiktoken>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
